added new works

--- a/src/views/partials/portfolio.hbs
+++ b/src/views/partials/portfolio.hbs
@@ -61,15 +61,15 @@
 
             {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
             "category_email"]'
-            imgSrc='@img/portfolio/portfolio-email-iqos-lil.jpg'}}
+            imgSrc='@img/portfolio/portfolio-email-iqos-lil.jpg' className="portfolio-email"}}
 
             {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
             "category_email"]'
-            imgSrc='@img/portfolio/portfolio-email-iqos-diff.jpg'}}
+            imgSrc='@img/portfolio/portfolio-email-iqos-diff.jpg' className="portfolio-email"}}
 
             {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
             "category_email"]'
-            imgSrc='@img/portfolio/portfolio-email-iqos-delish.jpg'}}
+            imgSrc='@img/portfolio/portfolio-email-iqos-delish.jpg' className="portfolio-email"}}
 
             {{>../portfolio/detailed title='IQOS' category='Landings' groups='["category_all",
             "category_landings"]'
@@ -97,15 +97,15 @@
 
             {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
             "category_email"]'
-            imgSrc='@img/portfolio/portfolio-email-yandex-love.jpg'}}
+            imgSrc='@img/portfolio/portfolio-email-yandex-love.jpg' className="portfolio-email"}}
 
             {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
             "category_email"]'
-            imgSrc='@img/portfolio/portfolio-email-yandex-hellowen.jpg'}}
+            imgSrc='@img/portfolio/portfolio-email-yandex-hellowen.jpg' className="portfolio-email"}}
 
             {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
             "category_email"]'
-            imgSrc='@img/portfolio/portfolio-email-yandex-succ.jpg'}}
+            imgSrc='@img/portfolio/portfolio-email-yandex-succ.jpg' className="portfolio-email"}}
 
             {{>../portfolio/detailed title='IQOS' category='Landing' groups='["category_all",
             "category_landings"]'
@@ -133,15 +133,15 @@
 
             {{>../portfolio/viewer title='VTB' category='Email Marketing' groups='["category_all",
             "category_email"]'
-            imgSrc='@img/portfolio/portfolio-digest.jpg'}}
+            imgSrc='@img/portfolio/portfolio-digest.jpg' className="portfolio-email"}}
 
             {{>../portfolio/viewer title='VTB' category='Email Marketing' groups='["category_all",
             "category_email"]'
-            imgSrc='@img/portfolio/portfolio-hello.jpg'}}
+            imgSrc='@img/portfolio/portfolio-hello.jpg' className="portfolio-email"}}
 
             {{>../portfolio/viewer title='VTB' category='Email Marketing' groups='["category_all",
             "category_email"]'
-            imgSrc='@img/portfolio/portfolio-vtb-actual.jpg'}}
+            imgSrc='@img/portfolio/portfolio-vtb-actual.jpg' className="portfolio-email"}}
 
             {{>../portfolio/detailed title='Samolet' category='CMS' groups='["category_all",
             "category_cms", "category_app"]'
@@ -166,6 +166,42 @@
             {{>../portfolio/detailed title='Jobx' category='Web Application' groups='["category_all",
             "category_app"]'
             imgSrc='@img/portfolio/portfolio-jobx.jpg' hrefLink="portfolio-jobx.html"}}
+
+            {{>../portfolio/viewer title='Perekrestok' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-perik-delivery.jpg' className="portfolio-email"}}
+
+            {{>../portfolio/viewer title='Perekrestok' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-perik-keks.jpg' className="portfolio-email"}}
+
+            {{>../portfolio/viewer title='Perekrestok' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-perik-sales.jpg' className="portfolio-email"}}
+
+            {{>../portfolio/detailed title='Addata' category='Web Service' groups='["category_all",
+            "category_service"]'
+            imgSrc='@img/portfolio/portfolio-addata.jpg' hrefLink="portfolio-addata.html"}}
+
+            {{>../portfolio/detailed title='Zero Design' category='Landing' groups='["category_all",
+            "category_landings"]'
+            imgSrc='@img/portfolio/portfolio-zerodesign.jpg' hrefLink="portfolio-zerodesign.html"}}
+
+            {{>../portfolio/detailed title='Rabota Today' category='Web Application' groups='["category_all",
+            "category_app"]'
+            imgSrc='@img/portfolio/portfolio-rabota.jpg' hrefLink="portfolio-rabota.html"}}
+
+            {{>../portfolio/viewer title='VTB' category='Web Service' groups='["category_all",
+            "category_service"]'
+            imgSrc='@img/portfolio/portfolio-vtb-offer.jpg' className="portfolio-picture"}}
+
+            {{>../portfolio/viewer title='Alfa' category='Web Service' groups='["category_all",
+            "category_service"]'
+            imgSrc='@img/portfolio/portfolio-alfa-reinvest.jpg' className="portfolio-picture"}}
+
+            {{>../portfolio/viewer title='Nft' category='Web Service' groups='["category_all",
+            "category_service"]'
+            imgSrc='@img/portfolio/portfolio-nft.jpg' className="portfolio-picture"}}
 
           </div>
         </div>
