--- a/src/views/partials/portfolio.hbs
+++ b/src/views/partials/portfolio.hbs
@@ -203,6 +203,18 @@
             "category_service"]'
             imgSrc='@img/portfolio/portfolio-nft.jpg' className="portfolio-picture"}}
 
+            {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-yandex-economy.jpg' className="portfolio-email"}}
+
+            {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-yandex-lazer.jpg' className="portfolio-email"}}
+
+            {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-yandex-ny.jpg' className="portfolio-email"}}
+
           </div>
         </div>
       </div>
