added new works

--- a/src/pages/portfolio/portfolio-dietolog.hbs
+++ b/src/pages/portfolio/portfolio-dietolog.hbs
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="ajax-page-title">
-      <h1>Rabota Today</h1>
+      <h1>Dietolog Online</h1>
     </div>
     <div class="row">
       <div class="col-sm-8 col-md-8 portfolio-block">
@@ -57,7 +57,7 @@
               <p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
             </li>
             <li>
-              <p><i class="fa fa-calendar"></i> 12 may, 2020</p>
+              <p><i class="fa fa-calendar"></i> 12 sep, 2022</p>
             </li>
           </ul>
           <div class="tags-block">
@@ -65,17 +65,10 @@
               <h3>Technology</h3>
             </div>
             <ul class="tags">
-              <li><a>Web Application</a></li>
               <li><a>HTML</a></li>
               <li><a>CSS</a></li>
               <li><a>JS</a></li>
-              <li><a>Webpack</a></li>
               <li><a>Gulp</a></li>
-              <li><a>Vue.js</a></li>
-              <li><a>Nuxt.js</a></li>
-              <li><a>PHP</a></li>
-              <li><a>Yii</a></li>
-              <li><a>Laravel</a></li>
             </ul>
           </div>
           <div class="btn-group share-buttons">
