--- a/src/views/partials/portfolio.hbs
+++ b/src/views/partials/portfolio.hbs
@@ -215,6 +215,42 @@
             "category_email"]'
             imgSrc='@img/portfolio/portfolio-yandex-ny.jpg' className="portfolio-email"}}
 
+            {{>../portfolio/detailed title='Body Time' category='Multilanding' groups='["category_all",
+            "category_multilandings"]'
+            imgSrc='@img/portfolio/portfolio-bodytime.jpg' hrefLink="portfolio-bodytime.html"}}
+
+            {{>../portfolio/detailed title='Daru Link' category='Landing' groups='["category_all",
+            "category_landings"]'
+            imgSrc='@img/portfolio/portfolio-app-mobile.jpg' hrefLink="portfolio-app-mobile.html"}}
+
+            {{>../portfolio/detailed title='Dietolog Online' category='Landing' groups='["category_all",
+            "category_landings"]'
+            imgSrc='@img/portfolio/portfolio-dietolog.jpg' hrefLink="portfolio-dietolog.html"}}
+
+            {{>../portfolio/detailed title='Medic Center' category='Landing' groups='["category_all",
+            "category_landings"]'
+            imgSrc='@img/portfolio/portfolio-mediccenter.jpg' hrefLink="portfolio-mediccenter.html"}}
+
+            {{>../portfolio/detailed title='App Filter' category='Web Application' groups='["category_all",
+            "category_app"]'
+            imgSrc='@img/portfolio/portfolio-app-filter.jpg' hrefLink="portfolio-app-filter.html"}}
+
+            {{>../portfolio/detailed title='ВАВТ' category='Landing' groups='["category_all",
+            "category_landings"]'
+            imgSrc='@img/portfolio/portfolio-vavt.jpg' hrefLink="portfolio-vavt.html"}}
+
+            {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-iqos-fiits.jpg' className="portfolio-email"}}
+
+            {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-iqos-collection.jpg' className="portfolio-email"}}
+
+            {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-iqos-pull.jpg' className="portfolio-email"}}
+
           </div>
         </div>
       </div>
