added mew works

--- a/src/views/partials/portfolio.hbs
+++ b/src/views/partials/portfolio.hbs
@@ -6,252 +6,8 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12">
         <div class="portfolio-content">
-          <ul class="portfolio-filters">
-            <li class="active">
-              <a class="filter btn btn-sm btn-link" data-group="category_all">All</a>
-            </li>
-            <li>
-              <a class="filter btn btn-sm btn-link" data-group="category_landings">Landings</a>
-            </li>
-            <li>
-              <a class="filter btn btn-sm btn-link" data-group="category_multilandings">Multilandings</a>
-            </li>
-            <li>
-              <a class="filter btn btn-sm btn-link" data-group="category_service">Web Service</a>
-            </li>
-            <li>
-              <a class="filter btn btn-sm btn-link" data-group="category_shops">Internet Shops</a>
-            </li>
-            <li>
-              <a class="filter btn btn-sm btn-link" data-group="category_app">Web Applications</a>
-            </li>
-            <li>
-              <a class="filter btn btn-sm btn-link" data-group="category_cms">CMS</a>
-            </li>
-            <li>
-              <a class="filter btn btn-sm btn-link" data-group="category_games">Web Games</a>
-            </li>
-            <li>
-              <a class="filter btn btn-sm btn-link" data-group="category_email">Email Marketing</a>
-            </li>
-          </ul>
-          <div class="portfolio-grid three-columns">
-            {{>../portfolio/detailed title='IQOS' category='Landings' groups='["category_all", "category_service"]'
-            imgSrc='@img/portfolio/portfolio-iqos.jpg' hrefLink="portfolio-iqos.html"}}
-
-            {{>../portfolio/detailed title='Procter & Gamble' category='Web Games' groups='["category_all",
-            "category_games"]'
-            imgSrc='@img/portfolio/portfolio-pg.jpg' hrefLink="portfolio-pg.html"}}
-
-            {{>../portfolio/detailed title='Yandex' category='Web Service' groups='["category_all",
-            "category_service"]'
-            imgSrc='@img/portfolio/portfolio-yandex-quiz.jpg' hrefLink="portfolio-yandex-quiz.html"}}
-
-            {{>../portfolio/detailed title='Avito' category='Web Application' groups='["category_all",
-            "category_app"]'
-            imgSrc='@img/portfolio/portfolio-avitoparser.jpg' hrefLink="portfolio-avitoparser.html"}}
-
-            {{>../portfolio/detailed title='Vlad Kadoni' category='Multilandings' groups='["category_all",
-            "category_multilandings"]'
-            imgSrc='@img/portfolio/portfolio-vladkadoni.jpg' hrefLink="portfolio-vladkadoni.html"}}
-
-            {{>../portfolio/detailed title='Yandex' category='Landings' groups='["category_all",
-            "category_landings"]'
-            imgSrc='@img/portfolio/portfolio-yandex-brth.jpg' hrefLink="portfolio-yandex-brth.html"}}
-
-            {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-email-iqos-lil.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-email-iqos-diff.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-email-iqos-delish.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/detailed title='IQOS' category='Landings' groups='["category_all",
-            "category_landings"]'
-            imgSrc='@img/portfolio/portfolio-iqos-experince.jpg' hrefLink="portfolio-iqos-experince.html"}}
-
-            {{>../portfolio/detailed title='Alfa' category='Landings' groups='["category_all",
-            "category_landings"]'
-            imgSrc='@img/portfolio/portfolio-alfa-investing.jpg' hrefLink="portfolio-alfa-investing.html"}}
-
-            {{>../portfolio/detailed title='Avtoraketa' category='Multilanding' groups='["category_all",
-            "category_multilandings"]'
-            imgSrc='@img/portfolio/portfolio-avtoraketa.jpg' hrefLink="portfolio-avtoraketa.html"}}
-
-            {{>../portfolio/detailed title='IQOS' category='Web Application' groups='["category_all",
-            "category_app"]'
-            imgSrc='@img/portfolio/portfolio-iqos-sticks.jpg' hrefLink="portfolio-iqos-sticks.html"}}
-
-            {{>../portfolio/detailed title='Atlas' category='CMS' groups='["category_all",
-            "category_cms"]'
-            imgSrc='@img/portfolio/portfolio-atlas.jpg' hrefLink="portfolio-atlas.html"}}
-
-            {{>../portfolio/detailed title='Kinopoisk' category='Web Application' groups='["category_all",
-            "category_app"]'
-            imgSrc='@img/portfolio/portfolio-kinopoisk.jpg' hrefLink="portfolio-kinopoisk.html"}}
-
-            {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-email-yandex-love.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-email-yandex-hellowen.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-email-yandex-succ.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/detailed title='IQOS' category='Landing' groups='["category_all",
-            "category_landings"]'
-            imgSrc='@img/portfolio/portfolio-iqos-choice.jpg' hrefLink="portfolio-iqos-choice.html"}}
-
-            {{>../portfolio/detailed title='PG Bonus' category='Internet Shop' groups='["category_all",
-            "category_shops"]'
-            imgSrc='@img/portfolio/portfolio-pgbonus.jpg' hrefLink="portfolio-pgbonus.html"}}
-
-            {{>../portfolio/detailed title='IQOS' category='Landing' groups='["category_all",
-            "category_landings"]'
-            imgSrc='@img/portfolio/portfolio-iqos-fiit.jpg' hrefLink="portfolio-iqos-fiit.html"}}
-
-            {{>../portfolio/detailed title='White Bit' category='Landing' groups='["category_all",
-            "category_landings"]'
-            imgSrc='@img/portfolio/portfolio-whitebit.jpg' hrefLink="portfolio-whitebit.html"}}
-
-            {{>../portfolio/detailed title='Lady Morgana' category='Multiland' groups='["category_all",
-            "category_multilandings"]'
-            imgSrc='@img/portfolio/portfolio-ladymorgana.jpg' hrefLink="portfolio-ladymorgana.html"}}
-
-            {{>../portfolio/detailed title='Portolfio Svetlitskaya' category='Landing' groups='["category_all",
-            "category_landings"]'
-            imgSrc='@img/portfolio/portfolio-svtlitskaya.jpg' hrefLink="portfolio-svtlitskaya.html"}}
-
-            {{>../portfolio/viewer title='VTB' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-digest.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/viewer title='VTB' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-hello.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/viewer title='VTB' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-vtb-actual.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/detailed title='Samolet' category='CMS' groups='["category_all",
-            "category_cms", "category_app"]'
-            imgSrc='@img/portfolio/portfolio-samolet.jpg' hrefLink="portfolio-samolet.html"}}
-
-            {{>../portfolio/detailed title='Blanc' category='Web Application' groups='["category_all",
-            "category_app", "category_cms"]'
-            imgSrc='@img/portfolio/portfolio-blanc.jpg' hrefLink="portfolio-blanc.html"}}
-
-            {{>../portfolio/detailed title='Bomber' category='Web Game' groups='["category_all",
-            "category_games"]'
-            imgSrc='@img/portfolio/portfolio-bomber.jpg' hrefLink="portfolio-bomber.html"}}
-
-            {{>../portfolio/detailed title='CodX' category='Landing' groups='["category_all",
-            "category_landings"]'
-            imgSrc='@img/portfolio/portfolio-codx.jpg' hrefLink="portfolio-codx.html"}}
-
-            {{>../portfolio/detailed title='Weather Application' category='Web Applications' groups='["category_all",
-            "category_app"]'
-            imgSrc='@img/portfolio/portfolio-weather-app.jpg' hrefLink="portfolio-weather-app.html"}}
-
-            {{>../portfolio/detailed title='Jobx' category='Web Application' groups='["category_all",
-            "category_app"]'
-            imgSrc='@img/portfolio/portfolio-jobx.jpg' hrefLink="portfolio-jobx.html"}}
-
-            {{>../portfolio/viewer title='Perekrestok' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-perik-delivery.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/viewer title='Perekrestok' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-perik-keks.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/viewer title='Perekrestok' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-perik-sales.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/detailed title='Addata' category='Web Service' groups='["category_all",
-            "category_service"]'
-            imgSrc='@img/portfolio/portfolio-addata.jpg' hrefLink="portfolio-addata.html"}}
-
-            {{>../portfolio/detailed title='Zero Design' category='Landing' groups='["category_all",
-            "category_landings"]'
-            imgSrc='@img/portfolio/portfolio-zerodesign.jpg' hrefLink="portfolio-zerodesign.html"}}
-
-            {{>../portfolio/detailed title='Rabota Today' category='Web Application' groups='["category_all",
-            "category_app"]'
-            imgSrc='@img/portfolio/portfolio-rabota.jpg' hrefLink="portfolio-rabota.html"}}
-
-            {{>../portfolio/viewer title='VTB' category='Web Service' groups='["category_all",
-            "category_service"]'
-            imgSrc='@img/portfolio/portfolio-vtb-offer.jpg' className="portfolio-picture"}}
-
-            {{>../portfolio/viewer title='Alfa' category='Web Service' groups='["category_all",
-            "category_service"]'
-            imgSrc='@img/portfolio/portfolio-alfa-reinvest.jpg' className="portfolio-picture"}}
-
-            {{>../portfolio/viewer title='Nft' category='Web Service' groups='["category_all",
-            "category_service"]'
-            imgSrc='@img/portfolio/portfolio-nft.jpg' className="portfolio-picture"}}
-
-            {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-yandex-economy.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-yandex-lazer.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-yandex-ny.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/detailed title='Body Time' category='Multilanding' groups='["category_all",
-            "category_multilandings"]'
-            imgSrc='@img/portfolio/portfolio-bodytime.jpg' hrefLink="portfolio-bodytime.html"}}
-
-            {{>../portfolio/detailed title='Daru Link' category='Landing' groups='["category_all",
-            "category_landings"]'
-            imgSrc='@img/portfolio/portfolio-app-mobile.jpg' hrefLink="portfolio-app-mobile.html"}}
-
-            {{>../portfolio/detailed title='Dietolog Online' category='Landing' groups='["category_all",
-            "category_landings"]'
-            imgSrc='@img/portfolio/portfolio-dietolog.jpg' hrefLink="portfolio-dietolog.html"}}
-
-            {{>../portfolio/detailed title='Medic Center' category='Landing' groups='["category_all",
-            "category_landings"]'
-            imgSrc='@img/portfolio/portfolio-mediccenter.jpg' hrefLink="portfolio-mediccenter.html"}}
-
-            {{>../portfolio/detailed title='App Filter' category='Web Application' groups='["category_all",
-            "category_app"]'
-            imgSrc='@img/portfolio/portfolio-app-filter.jpg' hrefLink="portfolio-app-filter.html"}}
-
-            {{>../portfolio/detailed title='ВАВТ' category='Landing' groups='["category_all",
-            "category_landings"]'
-            imgSrc='@img/portfolio/portfolio-vavt.jpg' hrefLink="portfolio-vavt.html"}}
-
-            {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-iqos-fiits.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-iqos-collection.jpg' className="portfolio-email"}}
-
-            {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
-            "category_email"]'
-            imgSrc='@img/portfolio/portfolio-iqos-pull.jpg' className="portfolio-email"}}
-
-          </div>
+          {{>portfolio-filters}}
+          {{>works}}
         </div>
       </div>
     </div>
