added new works

--- a/src/views/partials/works.hbs
+++ b/src/views/partials/works.hbs
@@ -213,4 +213,29 @@
   {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
   "category_email"]'
   imgSrc='@img/portfolio/portfolio-iqos-pull.jpg' className="portfolio-email"}}
+
+  {{>../portfolio/detailed title='Calmar' category='Multiland' groups='["category_all",
+  "category_multilandings"]'
+  imgSrc='@img/portfolio/portfolio-calmar.jpg' hrefLink="portfolio-calmar.html"}}
+
+  {{>../portfolio/detailed title='Alto' category='Landing' groups='["category_all",
+  "category_landings"]'
+  imgSrc='@img/portfolio/portfolio-alto.jpg' hrefLink="portfolio-alto.html"}}
+
+  {{>../portfolio/detailed title='Fitnes' category='Multiland' groups='["category_all",
+  "category_multilandings"]'
+  imgSrc='@img/portfolio/portfolio-fitnes.jpg' hrefLink="portfolio-fitnes.html"}}
+
+  {{>../portfolio/detailed title='IQOS' category='Landing' groups='["category_all",
+  "category_landings"]'
+  imgSrc='@img/portfolio/portfolio-iqos-ozon.jpg' hrefLink="portfolio-iqos-ozon.html"}}
+
+  {{>../portfolio/detailed title='IQOS' category='Landing' groups='["category_all",
+  "category_landings"]'
+  imgSrc='@img/portfolio/portfolio-iqos-taste.jpg' hrefLink="portfolio-iqos-taste.html"}}
+
+  {{>../portfolio/detailed title='Tab Plugin' category='Web Service' groups='["category_all",
+  "category_service"]'
+  imgSrc='@img/portfolio/portfolio-bikes-plugin.jpg' hrefLink="portfolio-bikes-plugin.html"}}
+
 </div>
