added new works

--- a/src/views/partials/works.hbs
+++ b/src/views/partials/works.hbs
@@ -24,15 +24,15 @@
 
   {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-email-iqos-lil.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-email-iqos-lil.jpg' }}
 
   {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-email-iqos-diff.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-email-iqos-diff.jpg' }}
 
   {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-email-iqos-delish.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-email-iqos-delish.jpg' }}
 
   {{>../portfolio/detailed title='IQOS' category='Landings' groups='["category_all",
   "category_landings"]'
@@ -60,15 +60,15 @@
 
   {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-email-yandex-love.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-email-yandex-love.jpg' }}
 
   {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-email-yandex-hellowen.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-email-yandex-hellowen.jpg' }}
 
   {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-email-yandex-succ.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-email-yandex-succ.jpg' }}
 
   {{>../portfolio/detailed title='IQOS' category='Landing' groups='["category_all",
   "category_landings"]'
@@ -96,15 +96,15 @@
 
   {{>../portfolio/viewer title='VTB' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-digest.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-digest.jpg' }}
 
   {{>../portfolio/viewer title='VTB' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-hello.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-hello.jpg' }}
 
   {{>../portfolio/viewer title='VTB' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-vtb-actual.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-vtb-actual.jpg' }}
 
   {{>../portfolio/detailed title='Samolet' category='CMS' groups='["category_all",
   "category_cms", "category_app"]'
@@ -132,15 +132,15 @@
 
   {{>../portfolio/viewer title='Perekrestok' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-perik-delivery.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-perik-delivery.jpg' }}
 
   {{>../portfolio/viewer title='Perekrestok' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-perik-keks.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-perik-keks.jpg' }}
 
   {{>../portfolio/viewer title='Perekrestok' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-perik-sales.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-perik-sales.jpg' }}
 
   {{>../portfolio/detailed title='Addata' category='Web Service' groups='["category_all",
   "category_service"]'
@@ -168,15 +168,15 @@
 
   {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-yandex-economy.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-yandex-economy.jpg' }}
 
   {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-yandex-lazer.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-yandex-lazer.jpg' }}
 
   {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-yandex-ny.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-yandex-ny.jpg' }}
 
   {{>../portfolio/detailed title='Body Time' category='Multilanding' groups='["category_all",
   "category_multilandings"]'
@@ -204,15 +204,15 @@
 
   {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-iqos-fiits.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-iqos-fiits.jpg' }}
 
   {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-iqos-collection.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-iqos-collection.jpg' }}
 
   {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
   "category_email"]'
-  imgSrc='@img/portfolio/portfolio-iqos-pull.jpg' className="portfolio-email"}}
+  imgSrc='@img/portfolio/portfolio-iqos-pull.jpg' }}
 
   {{>../portfolio/detailed title='Calmar' category='Multiland' groups='["category_all",
   "category_multilandings"]'
@@ -237,5 +237,57 @@
   {{>../portfolio/detailed title='Tab Plugin' category='Web Service' groups='["category_all",
   "category_service"]'
   imgSrc='@img/portfolio/portfolio-bikes-plugin.jpg' hrefLink="portfolio-bikes-plugin.html"}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-lego.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-beauti.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-moment.jpg'}}
+
+  {{>../portfolio/detailed title='Hromatograf' category='CMS' groups='["category_all",
+  "category_cms"]'
+  imgSrc='@img/portfolio/portfolio-hromatograf.jpg' hrefLink="portfolio-hromatograf.html"}}
+
+  {{>../portfolio/detailed title='Avtoraketa Perevod' category='Landing' groups='["category_all",
+  "category_landings"]'
+  imgSrc='@img/portfolio/portfolio-avtoraketa-perevod.jpg' hrefLink="portfolio-avtoraketa-perevod.html"}}
+
+  {{>../portfolio/detailed title='Marafon' category='CMS' groups='["category_all",
+  "category_landings", "category_cms"]'
+  imgSrc='@img/portfolio/portfolio-marafon.jpg' hrefLink="portfolio-marafon.html"}}
+
+  {{>../portfolio/detailed title='Lumos' category='Landing' groups='["category_all",
+  "category_landings"]'
+  imgSrc='@img/portfolio/portfolio-lumos.jpg' hrefLink="portfolio-lumos.html"}}
+
+  {{>../portfolio/detailed title='Lazer' category='Landing' groups='["category_all",
+  "category_landings"]'
+  imgSrc='@img/portfolio/portfolio-lazer.jpg' hrefLink="portfolio-lazer.html"}}
+
+  {{>../portfolio/detailed title='Avtovoronka' category='Landing' groups='["category_all",
+  "category_landings"]'
+  imgSrc='@img/portfolio/portfolio-avtovoronka.jpg' hrefLink="portfolio-avtovoronka.html"}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-ozerki.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-sales30.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-updating.jpg'}}
+
+  {{!-- Add --}}
+
+
 
 </div>
